# cammacrae.github.io

./: .doit.db.db  archive.html  conf.py  index.html  pyproject.toml  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
2018/: index.html
blog/: index.html
categories/: cat_cs.xml  computer-science.xml  index.html  mathematics.xml  optimisation.xml
categories/cat_cs/: index.html
categories/computer-science/: index.html
categories/mathematics/: index.html
categories/optimisation/: index.html
galleries/: index.html  rss.xml
listings/: index.html
pages/: about.rst  index.rst
pages/about/: index.html
posts/cs/: hamming-distance.ipynb
posts/cs/.ipynb_checkpoints/: hamming-distance-checkpoint.ipynb
posts/cs/hamming-distance/: index.html
