[tool.poetry]
name = "cammacrae.github.io"
version = "0.1.0"
description = ""
authors = ["Cam MacRae <cam.macrae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Nikola = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
